--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,20 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "firebase": "^11.5.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
+    "tesseract.js": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
